<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:id="@+id/name"
            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/age"
            android:id="@+id/age"
            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/national_id"
            android:id="@+id/national"
            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:layout_gravity="center"
            android:hint="@string/password"
            />
        <EditText
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/confirm_pass"
            android:id="@+id/confirm"
            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/number"
            android:inputType="number"
            android:layout_gravity="center"
            android:hint="@string/phone"
            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_gravity="center"
            android:hint="@string/email"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/save"
 android:onClick="save" />
</RelativeLayout>
